[package]
name = "rusty-trmnl-display"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
tinybmp = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4.27"
env_logger = "0.11.7"
serde_json = "1.0.140"
dotenv = "0.15.0"
